# hackermail

./: .coveragerc  .gitignore  CONTRIBUTING  README  README.md  TODO  USAGE.md  __format_reply.py  __summary_mm_commits.py  _hckmail.py  _hkml.py  _hkml_cache.py  _indent_patches.py  _url.sh  fetchmails.py  format_mail.py  format_reply.py  hkml  hkml.py  hkml_cache.py  hkml_drafts.py  hkml_export.py  hkml_fetch.py  hkml_format_reply.py  hkml_forward.py  hkml_init.py  hkml_list.py  hkml_ls.py  hkml_manifest.py  hkml_monitor.py  hkml_monitor_add.py  hkml_open.py  hkml_patch.py  hkml_pisearch.py  hkml_read.py  hkml_reply.py  hkml_send.py  hkml_sync.py  hkml_tag.py  hkml_thread.py  (+13 more)
manifests/: lore.js
scripts/: __summary_mm_commits.py  hkml-completion.sh  mm_commits_changes.sh  update_lore_manifest.sh
src/: _hkml.py  _hkml_cli.py  _hkml_cli_complete.py  _hkml_entry.py  _hkml_fmtstr.py  _hkml_list_cache.py  _hkml_mail_note.py  _hkml_sashiko_dev.py  _hkml_subproc.py  hkml.py  hkml_cache.py  hkml_common.py  hkml_config.py  hkml_drafts.py  hkml_export.py  hkml_fetch.py  hkml_forward.py  hkml_history.py  hkml_init.py  hkml_interactive.py  hkml_list.py  hkml_mail_note.py  hkml_manifest.py  hkml_monitor.py  hkml_open.py  hkml_patch.py  hkml_patch_format.py  hkml_reply.py  hkml_send.py  hkml_shortcut.py  hkml_signature.py  hkml_sync.py  hkml_tag.py  hkml_thread.py  hkml_view.py  hkml_view_mails.py  hkml_view_text.py  hkml_write.py  the_patch
tests/: codespell.sh  flake8.sh  run.sh  test_hkml_common.py  test_hkml_date.py  test_hkml_fmtstr.py  test_hkml_patch_format.py  (+4 more)
(+2 files in other folders)
